# Tetris.Royale

./: .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  LICENSE  README.md  config.json  install.sh  objectives.md  readme.md  tetris_v1.sh
.github/workflows/: ci.yml
SRD/: main.tex
TUI/: menuHandler.hpp
TUI/menus/: Makefile  inGameMenu.cpp  inGameMenu.hpp  inLobbyMenu.cpp  inLobbyMenu.hpp  loginMenu.cpp  loginMenu.hpp  mainMenu.cpp  mainMenu.hpp  menuHandler.hpp  preLobby.cpp  preLobbyMenu.cpp  preLobbyMenu.hpp  registerMenu.cpp  registerMenu.hpp  viewTestData.cpp
db-files/: main.db
doc/: main.tex
doc/srd/: main.tex
include/: bag.hpp  common.hpp  controller.hpp  gameMatrix.hpp  tetrisFactory.hpp  tetrisGame.hpp  tetromino.hpp
include/client/: Client.hpp  ClientGUI.hpp  ClientSession.hpp  ClientTUI.hpp  Config.hpp  DBRequestManager.hpp  GameRequestManager.hpp
include/client/TUI/: menuHandler.hpp
include/client/TUI/data/: viewTestData.hpp
include/client/TUI/menus/: inGameMenu.hpp  inLobbyMenu.hpp  loginMenu.hpp  preLobbyMenu.hpp  settingsMenu.hpp  viewTestData.hpp
include/client/connectivity/: ClientSession.hpp  Config.hpp  GameRequestManager.hpp
include/client/tui/: MenuHandler.hpp
include/common/: Common.hpp  Types.hpp  common.hpp  types.hpp
include/common/game-common/: tetromino.hpp  types.hpp
include/common/server-common/: DBCommon.hpp  GameState.hpp  KeyStroke.hpp  LobbyState.hpp  ServerRequest.hpp  ServerResponse.hpp
include/server/: masterServer.hpp
include/server/db-server/: DBServer.hpp
include/server/http-server/: HTTPServer.hpp
include/server/master-server/: masterServer.hpp
include/server/server-game-logic/: ClassicEngine.hpp  ClassicGame.hpp  RoyalEngine.hpp  RoyalGame.hpp  TetrisFactory.hpp  TetrisGame.hpp  bag.hpp  classicEngine.hpp  classicGame.hpp  gameEngine.hpp  gameMatrix.hpp  royalEngine.hpp  royalGame.hpp  tetrisFactory.hpp  tetrisGame.hpp  tetromino.hpp
include/server/server_game_logic/: classicEngine.hpp  classicGame.hpp  gameEngine.hpp  royalGame.hpp  tetrisFactory.hpp  tetrisGame.hpp
include/server/tetris-server/: Game.hpp  GameCreator.hpp  GameServer.hpp  Lobby.hpp  LobbyServer.hpp  TetrisServer.hpp
scripts/: find_dependencies.sh  format.sh
scripts/format/: .clang-format
src/: controller.cpp  gameMatrix.cpp  tetrisFactory.cpp  tetrisGame.cpp  tetromino.cpp
src/client/: Client.cpp  ClientGUI.cpp  ClientSession.cpp  ClientTUI.cpp  Config.cpp  DBRequestManager.cpp  GameRequestManager.cpp  client.cpp
src/client/TUI/: menuHandler.cpp
src/client/TUI/menu/: mainMenu.cpp  (+3 more)
src/client/connectivity/: ClientSession.cpp  Config.cpp  DBRequestManager.cpp  GameRequestManager.cpp
src/client/gui/: CMakeLists.txt  ClientGUI.cpp  LeaderScreen.cpp  LeaderScreen.hpp  LoginScreen.cpp  LoginScreen.hpp  RegisterScreen.cpp  RegisterScreen.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp
src/client/gui/GameMenus/: GameRender.cpp  GameRender.hpp  GameRenderGUI.cpp  GameScreen.cpp  GameScreen.hpp  GameScreenGUI.cpp
src/client/gui/LobbyMenus/: LobbyGUI.cpp  WaitingLobbyGUI.cpp  button.hpp  label.hpp  list.hpp  lobby.cpp  lobby.hpp  menuSwitcher.cpp  menuSwitcher.hpp  waitingLobby.cpp  waitingLobby.hpp
src/client/gui/LoginMenus/: LoginScreen.cpp  LoginScreen.hpp  LoginScreenGUI.cpp  RegisterScreen.cpp  RegisterScreen.hpp  RegisterScreenGUI.cpp
src/client/gui/MainMenus/: FriendsListWidget.cpp  LeaderScreen.cpp  LeaderScreen.hpp  LeaderScreenGUI.cpp  MainMenuGUI.cpp  ModeSelectionGUI.cpp  SettingsMenuGUI.cpp  friendWidget.cpp  friendWidget.hpp  friendsList.cpp  friendsList.hpp  mainMenu.cpp  mainMenu.hpp  modeSelection.cpp  modeSelection.hpp  settingsMenu.cpp  settingsMenu.hpp
src/client/gui/resources/: qrc_resources.cpp  resources.qrc
src/client/terminal/: main.cpp
src/client/tui/: MenuHandler.cpp
src/common/: Common.cpp  Types.cpp  bag.cpp  bag.hpp  classicEngine.cpp  classicEngine.hpp  classicGame.cpp  classicGame.hpp  common.cpp  gameEngine.cpp  gameEngine.hpp  gameMatrix.cpp  royalEngine.cpp  royalEngine.hpp  royalGame.cpp  royalGame.hpp  tetrisFactory.cpp  tetrisFactory.hpp  tetrisGame.cpp  tetrisGame.hpp  tetromino.cpp  tetromino.hpp  types.cpp  types.hpp
src/common/game-common/: tetromino.cpp  types.cpp
src/common/game_common/: tetromino.cpp
src/common/server-common/: DBCommon.cpp  GameState.cpp  KeyStroke.cpp  LobbyState.cpp  ServerRequest.cpp  ServerResponse.cpp
src/common/tetris-common/: bag.hpp  classicEngine.hpp  classicGame.hpp  gameEngine.hpp  gameMatrix.hpp  power-ups.hpp  powerUp.hpp  powerUps.hpp  royalEngine.hpp  royalGame.hpp  tetrisFactory.hpp  tetrisGame.hpp  tetromino.hpp  types.hpp
src/db-python-test/: db_example.py  tetris.db
src/db-python-test/db/: __init__.py  account.py  common.py  db_script.py
src/server/: MasterServer.cpp  masterServer.cpp  server.cpp  server.py  serverDocs.md
src/server/client/: db_service.py
src/server/db-server/: DBServer.cpp  DBServer.hpp  dbServer.cpp  dbServer.hpp
src/server/http-server/: HTTPServer.cpp  HTTPServer.hpp
src/server/master-server/: masterServer.cpp  masterServer.hpp
src/server/pyclient/: db_service.py
src/server/pyserver/: __init__.py  request_objects.py
src/server/server/: __init__.py  request_objects.py
src/server/server-game-logic/: Bag.cpp  ClassicEngine.cpp  ClassicGame.cpp  GameEngine.cpp  GameMatrix.cpp  RoyalEngine.cpp  RoyalGame.cpp  TetrisFactory.cpp  TetrisGame.cpp  Tetromino.cpp  bag.cpp  classicEngine.cpp  classicGame.cpp  gameEngine.cpp  gameMatrix.cpp  royalEngine.cpp  royalGame.cpp  tetrisFactory.cpp  tetrisGame.cpp  tetromino.cpp
src/server/server_game_logic/: gameEngine.cpp  royalEngine.cpp  royalGame.cpp  tetrisGame.cpp
src/server/testing/: curls.sh
src/server/tetris-server/: Game.cpp  GameCreator.cpp  GameServer.cpp  Lobby.cpp  LobbyServer.cpp  TetrisServer.cpp
src/server/udp-server/: UDPServer.cpp  UDPServer.hpp
src/terminal/: controller.cpp  controller.hpp  main.cpp
src/terminal/view/: inputHandler.hpp  tui.cpp  tui.hpp
srd/: main.tex
tests/: CMakeLists.txt  TetrisFactoryTest.cpp
(+55 files in other folders)
